fix: set flex-start if text is overflowing in fruit item

--- a/frontend/B/src/components/FruitsForm.css
+++ b/frontend/B/src/components/FruitsForm.css
@@ -58,6 +58,8 @@
 
   display: flex;
   align-items: center;
+  flex-wrap: wrap;
+  align-content: flex-start;
   overflow: hidden;
 }
 
